Fix layout bugs, mostly old IE RTL

--- a/src/webui/css/lteIE9.css
+++ b/src/webui/css/lteIE9.css
@@ -9,3 +9,23 @@ hr.dotted {
 .icon-spin:before {
   content: "\e979";
 }
+
+/*
+Required for the checkbox to be visible in RTL layouts.
+See comment in lteIE7.css above the `#settings-accordion` for info about why
+why need to do this.
+*/
+.checkbox-container {
+  width: 97%;
+}
+
+/*
+Ref: bootstrap:modals.less
+In RTL layout, centering of modals works on IE10+, but not in IE<=9.
+*/
+body[dir="rtl"] .modal {
+  left: initial;
+  margin-left: initial;
+  right: 50%;
+  margin-right: -280px;
+}
